Fix small rental item overlay buttons
Makes the overlay only cover the movie/game image
This allows the Rent and Reserve buttons to still function

--- a/routes/app/views/css/styles.css
+++ b/routes/app/views/css/styles.css
@@ -103,19 +103,16 @@
  * Small rental item styles
  */
 .rentalItemSmall--overlay {
-  position: absolute;
-  display: none;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  position: relative;
+  text-align: center;
+  background-color: rgba(0, 0, 0);
   z-index: 2;
   font-size: 2em;
 }
-.rentalItemSmall--overlay-text {
+.rentalItemSmall--overlay .card-img-top {
+  opacity: 0.5;
+}
+.rentalItemSmall--overlay .rentalItemSmall--overlay-text {
   position: absolute;
   top: 50%;
   margin: 0 auto;
